wrong src path in html

--- a/index.html
+++ b/index.html
@@ -136,6 +136,6 @@
     <input type="text" id="search" placeholder="🔍 Search movies..." autocomplete="off">
     <div id="movies"></div>
     <div id="movies"></div>
-    <script src="/praticeJS/script/promises.js"></script>
+    <script src="promises.js"></script>
 </body>
 </html>
